webkit2gtk (2.15.1-1) UNRELEASED; urgency=medium

  * New upstream development release.
  * debian/patches/fix-ftbfs-armel.patch:
    + The previous update broke this patch, fix it now.
  * debian/rules:
    + Don't use the gold linker in kFreeBSD, its version of libxslt is
      still affected by #801989. We should be able to revert this change
      once we have libxslt >= 1.1.29.
    + Enable gold again in mips and mipsel now that #834147 is fixed and
      we have binutils 2.27-9.
  * debian/watch, debian/gbp.conf:
    + Update for 2.15.x packages in experimental.

 -- Alberto Garcia <berto@igalia.com>  Thu, 13 Oct 2016 11:12:18 +0300

webkit2gtk (2.14.1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/install-minibrowser.patch:
    + Drop patch, this has been merged upstream.
  * debian/rules:
    + Set -DENABLE_MINIBROWSER=ON.
  * debian/libjavascriptcoregtk-4.0-bin.install:
    + Install the jsc executable in /usr/bin.
  * debian/patches/fix-ftbfs-armel.patch:
    + Add output message telling whether we need to build Atomics.cpp.
  * debian/control:
    + Update Vcs-* links (thanks, Jeremy Bicha) (Closes: #840483).
  * debian/compat:
    + Set debhelper compatibility level to 9.

 -- Alberto Garcia <berto@igalia.com>  Wed, 12 Oct 2016 14:09:27 +0300

webkit2gtk (2.14.0-1) unstable; urgency=medium

  * New upstream release.
  * debian/watch:
    + Stop scanning the 2.13 branch.
  * debian/gbp.conf:
    + Update upstream branch name.

 -- Alberto Garcia <berto@igalia.com>  Tue, 20 Sep 2016 15:31:35 +0300

webkit2gtk (2.13.92-1) experimental; urgency=medium

  * New upstream development release.
  * debian/patches/fix-ftbfs-armel.patch:
    + Fix FTBFS in Armel.

 -- Alberto Garcia <berto@igalia.com>  Fri, 16 Sep 2016 11:32:19 +0300

webkit2gtk (2.13.91-1) experimental; urgency=medium

  * New upstream development release.
  * debian/{control,copyright,watch}:
    + Use https instead of http for webkitgtk.org.