@@ -5,7 +5,7 @@ Index: webkitgtk/CMakeLists.txt
 ===================================================================
 --- webkitgtk.orig/CMakeLists.txt
 +++ webkitgtk/CMakeLists.txt
-@@ -52,6 +52,8 @@ if (LOWERCASE_CMAKE_SYSTEM_PROCESSOR MAT
+@@ -63,6 +63,8 @@ if (LOWERCASE_CMAKE_SYSTEM_PROCESSOR MAT
      set(WTF_CPU_ARM 1)
  elseif (LOWERCASE_CMAKE_SYSTEM_PROCESSOR MATCHES "^aarch64")
      set(WTF_CPU_ARM64 1)
@@ -18,7 +18,7 @@ Index: webkitgtk/Source/JavaScriptCore/CMakeLists.txt
 ===================================================================
 --- webkitgtk.orig/Source/JavaScriptCore/CMakeLists.txt
 +++ webkitgtk/Source/JavaScriptCore/CMakeLists.txt
-@@ -1335,6 +1335,7 @@ endif ()
+@@ -1388,6 +1388,7 @@ endif ()
  
  if (WTF_CPU_ARM)
  elseif (WTF_CPU_ARM64)
